[package]
name = "hole-punching-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"] }
stun = "0.4.4"
clap = "3.2.6"
axum = { version = "0.5.11" }
nix = "0.11.0"
reqwest = "0.11"
hyper = "0.14.27"
futures = "0.3.28"

[[bin]]
name = "client"
path = "src/udp_client.rs"

[[bin]]
name = "server"
path = "src/udp_server.rs"